sidecar/0-strict-mtls.yaml
# Istio Strict mtls policy, This will enforce that ONLY traffic that is TLS is allowed between proxies

# https://istio.io/latest/docs/tasks/security/authentication/mtls-migration/
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "istio-system"
spec:
  mtls:
    mode: STRICT
